increase the margin-bottom of the single choice

--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -62,7 +62,7 @@ class="igisokozo slide-in"
         <span>{{igisokozo.igisokozo}}</span>
     </div>
     <div class="mx-5 mt-5 py-2 border border-dark overflow-x-auto rounded p-2 slide-in">
-        <div class="form-check fs-5 slide-in d-flex align-items-start"
+        <div class="form-check fs-5 slide-in d-flex align-items-center mb-3"
         *ngFor="let item of igisokozo.answers"
         role="button">
             <input 
