fix the position issue of the back-to-igisokozo button on igisokozo component

--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -139,7 +139,7 @@ class="igisokozo slide-in"
             <b
             (click)="giveUp()"
                 type="button"
-                class="btn  btn-sm me-3 border border-dark"
+                class="btn  btn-sm me-3 border border-dark d-flex align-items-center"
             >
             <b>Impa</b>
             </b>
