add playing levels

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -30,7 +30,7 @@
             </div><br><br><br>
 
             <div class="w-100 d-flex justify-content-center mt-4">
-                <button class="btn bg-main text-white px-5 login">
+                <button class="bg-main rounded text-white p-2 px-5 border border-none">
                     <b>Login</b>
                 </button>
 
