--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -38,7 +38,7 @@
           <br><br><br>
 
             <div class="w-100 d-flex justify-content-center mt-4">
-                <button class="btn bg-main text-white px-5 signup">
+                <button class="bg-main rounded text-white p-2 px-5 border border-none">
                     <b>Signup</b>
                 </button>
 
