--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,23 @@ button:hover{
   background-color: #18b86b;  
 }
 
+.border-main{
+  border:2px solid #3ded97
+}
+
+.lg-rounded{
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+.lg-rounded:hover{
+  background-color: #18b86b;  
+
+
+}
 
 
 
