--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -34,8 +34,8 @@
 
     </div>
     <div
-     class="bg-grey position-fixed mt-2 rounded menu" 
-     style="right: 1%; z-index:25"
+     class="bg-main position-fixed mt-2 rounded menu h-100 w-100" 
+     style="right: 1%; z-index:25; top:0"
      *ngIf="isMenuShown">
      <div class="float-end text-grey" style="margin-top: -8.5%; margin-left:100px">
         <i class="fa fa-caret-up pe-3"></i>
@@ -46,7 +46,7 @@
             role="button"
             (click)="changeMenu('profile')"
             >
-                <i class="fa fa-user-circle me-1"></i>
+                <i class="fa fa-bars me-1"></i>
                 <span>My profile</span>
             </div>
             <hr class="my-1">
