--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -18,7 +18,7 @@
         class="text-white"
         (click)="toggleMenu()">
             <span class="xl-fs">
-               <i class="fa fa-user-circle"></i>
+               <i class="fa fa-bars"></i>
             </span>
 
         </div>
@@ -37,19 +37,40 @@
      class="bg-main position-fixed mt-2 rounded menu h-100 w-100" 
      style="right: 1%; z-index:25; top:0"
      *ngIf="isMenuShown">
-     <div class="float-end text-grey" style="margin-top: -8.5%; margin-left:100px">
-        <i class="fa fa-caret-up pe-3"></i>
-     </div><br>
+     <div class="d-flex align-items-center justify-content-between w-100 px-4">
+        <div class="d-flex align-items-center">
+            <div>
+                <img 
+                class="rounded-circle"
+                style="width:50px"
+                src="../../../assets/images/userprofile.png" 
+                alt="">
+            </div>
+            <div class="d-grid">
+                <span>Don Delice Dushime</span>
+                <b>@dondelice257</b>
+            </div>
+        </div>
+        <div>
+            <span 
+            class="xl-fs"
+            role="button"
+            (click)="toggleMenu()">
+                <i class="fa fa-xmark"></i>
+            </span>
+        </div>
+     </div>
+     <hr class="px-4">
+
         <div class="mx-4 mt-1">
             <div 
             class="d-flex align-items-center my-2" 
             role="button"
             (click)="changeMenu('profile')"
             >
-                <i class="fa fa-bars me-1"></i>
+                <i class="fa fa-user-circle me-1"></i>
                 <span>My profile</span>
             </div>
-            <hr class="my-1">
             <div style="line-height: 1;" 
              class="d-flex align-items-center my-2"
              role="button"
@@ -58,7 +79,6 @@
                 <i class="fa fa-star me-1"></i>
                 <span>Most scores</span>
             </div>
-            <hr class="my-1">
         </div>
         <div class="mx-4 mt-3 mb-1">
             <div 
