fix alignement issues on menu

--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -34,7 +34,7 @@
 
     </div>
     <div
-     class="bg-main position-fixed mt-2 rounded menu h-100 w-100" 
+     class="bg-main text-white position-fixed mt-2 rounded menu h-100 w-100" 
      style="right: 1%; z-index:25; top:0"
      *ngIf="isMenuShown">
      <div class="d-flex align-items-center justify-content-between w-100 px-4">
@@ -64,7 +64,7 @@
 
         <div class="mx-4 mt-1">
             <div 
-            class="d-flex align-items-center my-2" 
+            class="d-flex align-items-center my-3" 
             role="button"
             (click)="changeMenu('profile')"
             >
