--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -39,11 +39,12 @@
      *ngIf="isMenuShown">
      <div class="d-flex align-items-center justify-content-between w-100 px-4">
         <div class="d-flex align-items-center">
-            <div>
+            <div
+            class="me-2">
                 <img 
                 class="rounded-circle"
-                style="width:50px"
-                src="../../../assets/images/userprofile.png" 
+                style="width:50px; height:50px; border:2px solid white"
+                src="../../../assets/images/profile.jpg" 
                 alt="">
             </div>
             <div class="d-grid">
@@ -64,32 +65,68 @@
 
         <div class="mx-4 mt-1">
             <div 
-            class="d-flex align-items-center my-3" 
+            class="d-flex align-items-center my-3 mb-4 justify-content-between fs-3" 
             role="button"
             (click)="changeMenu('profile')"
             >
-                <i class="fa fa-user-circle me-1"></i>
+            <div
+            class="d-flex align-items-center">
+                <i class="fa fa-user-circle me-2 fs-1"></i>
                 <span>My profile</span>
             </div>
-            <div style="line-height: 1;" 
-             class="d-flex align-items-center my-2"
-             role="button"
-            (click)="changeMenu('most-scores')"
-            >
-                <i class="fa fa-star me-1"></i>
-                <span>Most scores</span>
+            <span>
+                <i class="fa fa-chevron-right"></i>
+            </span>
+                
             </div>
-        </div>
-        <div class="mx-4 mt-3 mb-1">
             <div 
+            class="d-flex align-items-center my-3 mb-4 justify-content-between fs-3" 
+            role="button"
+            (click)="changeMenu('most-score')"
+            >
+            <div
+            class="d-flex align-items-center">
+                <i class="fa fa-star me-2 fs-1"></i>
+                <span>Most score</span>
+            </div>
+            <span>
+                <i class="fa fa-chevron-right"></i>
+            </span>
+                
+            </div>
+
+            <div 
+            class="d-flex align-items-center my-3 mb-4 justify-content-between fs-3" 
+            >
+            <div
+            class="d-flex align-items-center">
+                <i class="fa fa-gear me-2 fs-1"></i>
+                <span>Settings</span>
+            </div>
+            <span>
+                <i class="fa fa-chevron-right"></i>
+            </span>
+                
+            </div>
+            <div 
+            class="d-flex align-items-center my-3 mb-4 fs-3" 
+            >
+            <div
+            class="d-flex align-items-center"
             (click)="openModal()"
-             class="d-flex align-items-center"
             role="button"
             >
-                <i class="fa fa-sign-out-alt me-1"></i>
-                <b>Logout</b>
+                <i class="fa fa-sign-out-alt me-2 fs-1"></i>
+                <span>Logout</span>
             </div>
+            <!-- <span>
+                <i class="fa fa-chevron-right"></i>
+            </span> -->
+                
+            </div>
+           
         </div>
+       
 
     </div>
     </div>
