--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -14,28 +14,32 @@
     <div>
         <div class="pe-2">
         <div 
+        *ngIf="isAuthenticated"
         role="button"
         class="text-white"
-        (click)="toggleMenu()">
+        (click)="toggleMenu()"
+        >
             <span class="xl-fs">
                <i class="fa fa-bars"></i>
             </span>
 
         </div>
-        <!-- <div class="text-white">
-            <span>
-               <i class="fa fa-user-plus"></i>
-            </span>
-            <span>
+        <div 
+        *ngIf="!isAuthenticated"
+        routerLink="/login"
+        class="xl-fs text-white "
+        role="button">
+            <span
+            >
                 <i class="fa fa-sign-in-alt"></i>
              </span>
 
-        </div> -->
+        </div>
 
     </div>
     <div
      class="bg-main text-white position-fixed mt-2 rounded menu h-100 w-100" 
-     style="right: 1%; z-index:25; top:0"
+     style="right:0; z-index:25; top:0"
      *ngIf="isMenuShown">
      <div class="d-flex align-items-center justify-content-between w-100 px-4">
         <div class="d-flex align-items-center">
