--- a/src/app/modules/igisokozo/level-one/level-one.component.html
+++ b/src/app/modules/igisokozo/level-one/level-one.component.html
@@ -57,35 +57,74 @@ class="mt-5 ms-4 pt-5"
 class="igisokozo slide-in"
 *ngIf="niruze"
 >
-<div>
-    <div class="d-flex w-100 justify-content-center fs-2 mt-5 slide-in">
-        <span>{{igisokozo.igisokozo}}</span>
+<div
+class="slide-in px-3"
+*ngIf="igisokozo">
+    <div class="w-100 d-grid justify-content-between">
+        <div class="bg-light mt-1 rounded p-0 border border-warning">
+            <span class="m-1">uripfuza kubika amanota yawe ? <b 
+                routerLink="/login"
+                role="button"
+                class="text-main">injira</b></span>
+        </div>
+        <span>amanota : {{score}}</span>
     </div>
-    <div class="mx-5 mt-5 py-2 border border-dark overflow-x-auto rounded p-2 slide-in">
-        <div class="form-check fs-5 slide-in d-flex align-items-center mb-3"
-        *ngFor="let item of igisokozo.answers"
-        role="button">
-            <input 
+    <div class="d-flex w-100 justify-content-center fs-2 mt-3 mb-2 slide-in">
+        <span class="slide-in">
+            {{igisokozo.igisokozo}}
+        
+        </span>
+    </div>
+
+
+    <div>
+        <div
+        class="slide-in">
+            <div
+            class="slide-in"
+            *ngFor="let item of igisokozo.options; let i=index"
+            role="button"
+             (click)="checkAnswer(item)"
+             [ngClass]="{
+                'not-clickable': answerDisabled
+             }"
+
+            >
+             <input 
              type="radio"
+             style="visibility: hidden;"
              id="choice"
              name="choice" 
-             class="form-check-inputborder border-dark p-2 me-2 custom-radio"
-             (click)="checkAnswer(item)"
+             class="form-check-inputborder border-dark p-2 me-2 custom-radio text-success"
              [disabled]="answerDisabled"
+            
             >
-            <label for="choice" class="form-check-label">{{item.answer}}</label>
-        </div>
-    
-    </div>
-    <div *ngIf="hasGivenUp" class="mx-5 mt-3">
-        <div class="d-grid">
-            <b>Inyishu nziza ni :</b>
-            <span>{{goodAnswer}}</span>
-        </div>
-    </div>
-</div>
+            <label 
+            for="choice"
+            class="initial-status rounded p-2 w-100 me-2 mb-1"
+            [ngClass]="{
+                'success-status':item===igisokozo.inyishu.inyishu && highlightAnswers,
+                'danger-status':selectedAnswer !== igisokozo.inyishu.inyishu && highlightAnswers && item==selectedAnswer,
+            }">
+                <div
+            class=""
 
-<div class="mt-5 me-5 float-end">
+            >
+             <span class="d-flex">
+                <span class="me-1">{{i+1}}. </span>
+                <span>{{item}}</span>
+                
+            </span>
+
+            </div>
+            </label>
+            
+
+            </div>
+        </div>
+    </div>
+
+<div class="mt-5 me-2 float-end">
     <button
     (click)="getIgisokozo()"
         type="button"
@@ -104,121 +143,7 @@ class="igisokozo slide-in"
 </div>
 <div class="w-100 d-flex justify-content-center">
 
-<dialog id="myDialog" class="rounded shadow animate-slide" style="border: none; width: 100%">
-    <div class="float-end">
-        <div>
-            <b>score :</b>
-            <span>{{score}}</span>
-        </div>
 
-    </div><br>
-    <div *ngIf="!isCorrect">
-        <p class="text-center ">
-            <i class="fa fa-times-circle fs-x text-danger"></i>
-        </p>
-
-        <p
-            style="font-weight: 900; font-size: 20px"
-            class="text-center"
-        >
-            Ryooo Kirakunaniye
-            <img 
-            style="width: 40px;"
-            class="bg-main"
-            src="../../../assets/images/sad(1).gif" 
-            alt="">
-        </p>
-        <div class="text-center mt-3 w-100 d-flex justify-content-around">
-            <b
-            (click)="closeModal()"
-            type="button"
-            class="btn btn-sm me-3 border border-dark"
-        >
-        <b>Subiramwo</b>
-        </b>
-            <b
-            (click)="giveUp()"
-                type="button"
-                class="btn  btn-sm me-3 border border-dark d-flex align-items-center"
-            >
-            <b>Impa</b>
-            </b>
-
-            <button
-            (click)="getIgisokozo2()"
-                type="button"
-                class="rounded p-2 bg-main text-white"
-                style="border:none"
-            >
-                <b>
-                Igikurikira
-
-                </b>
-                <i class="fa fa-arrow-right"></i>
-                
-            </button>
-        </div>
-        <div class="mt-2">
-            <div>
-                <b>Inyishu watanze :</b>
-                <span>{{providedAnswer}}</span>
-            </div>
-        </div>
-    </div>
-    <div *ngIf="isCorrect">
-        <p class="text-center ">
-            <i class="fa fa-check-circle fs-x text-success"></i>
-        </p>
-
-        <p
-            style="font-weight: 900; font-size: 20px"
-            class="text-center"
-        >
-            Uragitoye 
-            <i class="fa fa-smile"></i>
-        </p>
-        <div class=""
-        style="width: 100%; display:flex; justify-content:center">
-            <span>
-                <img 
-                style="width: 100px;"
-                src="../../../assets/images/wired-outline-1103-confetti.gif" 
-                alt="">
-            </span>           
-        </div>
-        
-       
-      
-        <div class="text-center mt-3 w-100 d-flex justify-content-around">
-            <b
-            (click)="closeModal()"
-            type="button"
-            class="btn btn-sm me-3 border border-dark"
-        >
-        <b>Subira inyuma</b>
-        </b>
-         
-
-            <button
-            (click)="getIgisokozo2()"
-                type="button"
-                class="rounded p-2 bg-main text-white"
-                style="border:none"
-            >
-                <b>
-                Igikurikira
-
-                </b>
-                <i class="fa fa-arrow-right"></i>
-                
-            </button>
-        </div>
-    </div>
-
-
-
-
-</dialog>
 </div>
 
 <router-outlet></router-outlet>
