--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -48,17 +48,25 @@
      *ngIf="isMenuShown">
      <div class="d-flex align-items-center justify-content-between w-100 px-4">
         <div class="d-flex align-items-center">
-            <div
+            <!-- <div
             class="me-2">
                 <img 
                 class="rounded-circle"
                 style="width:50px; height:50px; border:2px solid white"
                 src="../../../assets/images/profile.jpg" 
                 alt="">
+            </div> -->
+            <div
+            class="me-2">
+                <img 
+                class="rounded-circle"
+                style="width:50px; height:50px; border:2px solid white"
+                [src]="userInfo.profile_photo" 
+                alt="">
             </div>
             <div class="d-grid">
-                <span>Don Delice Dushime</span>
-                <b>@dondelice257</b>
+                <span>{{userInfo.first_name}} {{userInfo.last_name}}</span>
+                <b>{{userInfo.username}}</b>
             </div>
         </div>
         <div>
