--- a/src/app/modules/profile/profile/profile.component.html
+++ b/src/app/modules/profile/profile/profile.component.html
@@ -4,54 +4,39 @@
        
     </div> -->
     <div class="row">
-        <div class="col-md-4">
-            <div class="profile-info text-center">
-                <img src="../../../assets/images/userprofile.png" alt="User Photo" class="profile-photo img-fluid rounded-circle smaller-photo">
-                <h3 class="profile-name mt-3">dondelice</h3>
-                <p class="profile-points text-muted">342 points</p>
+        <div class="">
+            <div class="profile-info text-center d-grid">
+                <div class="d-flex justify-content-center">
+                    <img 
+                     src="../../../assets/images/userprofile.png" 
+                    alt="User Photo" 
+                    style="width:250px; height:250px"
+                    class="profile-photo img-fluid rounded-circle"
+                    >
+
+                </div>
+                <b 
+                class="profile-name mt-3"
+                style="font-size: 20px;">Don Delice Dushime</b>
+                <p class="profile-points text-muted">
+                    <i>@dondelice257</i>
+                </p>
+                <p class="profile-points text-muted">
+                    <b
+                    class="fs-4"
+                    style="font-style: oblique;"
+                    >134 points</b>
+                </p>
+            </div>
+
+            <div>
+                <div class="w-100 d-flex justify-content-center">
+                    <button class="btn btn-outline-dark">Edit profile</button>
+                </div>
             </div>
             
         </div>
-        <div class="w-100 d-flex justify-content-center">
-            <div class="d-flex justify-content-center" style="width:80%; justify-content:center">
-          
-                <div class="bg-grey rounded w-100 p-2 overflow-auto">
-                    <div class="float-end mb-2 text-primary">
-                        <i class="fa fa-pen"></i>
-                    </div>
-                    
-                    <div>
-                        <div class="my-2 d-flex"> 
-                            <b class="mx-2">Username</b>
-                            <b class="me-2">:</b>
-                            <span>dondelice</span>
-                        </div>
-                        <div class="my-2 d-flex">
-                            <b class="mx-2">Email</b>
-                            <b class="me-2">:</b>
-                            <span>dondelicedushime@gmail.com</span>
-                        </div>
-                        <div class="my-2 d-flex">
-                            <b class="mx-2">Score</b>
-                            <b class="me-2">:</b>
-                            <span>342</span>
-                        </div>
-                        <div class="my-2 d-flex">
-                            <b class="mx-2">wrong answers</b>
-                            <b class="me-2">:</b>
-                            <span>12</span>
-                        </div>
-                        <div class="my-2 d-flex">
-                            <b class="mx-2">correct answers</b>
-                            <b class="me-2">:</b>
-                            <span>56</span>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-
-        </div>
+    
        
     </div>
 </div>
