--- a/src/app/modules/profile/profile/profile.component.scss
+++ b/src/app/modules/profile/profile/profile.component.scss
@@ -1,3 +1,3 @@
-.smaller-photo {
-    width: 50%; /* Adjust the width as needed */
-}
+// .smaller-photo {
+//     width: 50%; /* Adjust the width as needed */
+// }
