redesign most-scores page

--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -99,7 +99,7 @@
             <div 
             class="d-flex align-items-center my-3 mb-4 justify-content-between fs-3" 
             role="button"
-            (click)="changeMenu('most-score')"
+            (click)="changeMenu('most-scores')"
             >
             <div
             class="d-flex align-items-center">
