--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -1,9 +1,92 @@
-<!-- <div class="ps-2 pt-1">
-    <app-go-back></app-go-back>
-</div> -->
+<div class="">
+    <div class="">
+        <div class="d-flex mt-2
+        ">
+            <b class="text-muted">Abafise amanota menshi</b>
+        </div>
+        <div class="mt-3">
+            <div>
+                <div class="d-flex justify-content-around align-items-start
+                ">
+                    <div class="d-grid mt-5">
+                        <div class="d-grid">
+                            <div class="d-flex justify-content-center">
+                                <img 
+                            class="rounded-circle"
+                            style="width:60px; height:60px"
+                            src="../../../assets/images/profile.jpg" alt="">
+
+                            </div>
+                            <div class="mt-2">
+                            <span>Don Delice</span>
+
+                            </div>
+
+
+                        </div>
+                      
+                    </div>
+                    <div class="d-grid mt-5">
+                        <div class="d-grid">
+                            <div class="d-flex justify-content-center">
+                                <img 
+                            class="rounded-circle"
+                            style="width:60px; height:60px"
+                            src="../../../assets/images/profile.jpg" alt="">
+
+                            </div>
+                            <div class="mt-2">
+                            <span>Don Delice</span>
+
+                            </div>
+
+
+                        </div>
+                      
+                    </div>
+                    <div class="d-grid mt-5">
+                        <div class="d-grid">
+                            <div class="d-flex justify-content-center">
+                                <img 
+                            class="rounded-circle"
+                            style="width:60px; height:60px"
+                            src="../../../assets/images/profile.jpg" alt="">
+
+                            </div>
+                            <div class="mt-2">
+                            <span>Don Delice</span>
+
+                            </div>
+
+
+                        </div>
+                      
+                    </div>
+
+
+                  
+                
+                </div>
+                <div class="d-flex mt-4  align-items-end justify-content-around">
+                    <div class="clip-1">
+                        <div class="d-grid pt-5 ps-3  ">
+                            <b>1</b>
+                            <b>140 pts</b>
+                        </div>
+                    </div>
+                    <div class="clip-2"></div>
+                    <div class="clip-3"></div>
+
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--  -->
-<div style="width: 337px; height: 680px; background: #36AE7C; border-radius: 30px"></div>
 <!-- Enlarged photo modal -->
 <div class="photo-modal" [ngClass]="{ 'show-modal': isPhotoOpen }">
     <b
