--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -8,7 +8,7 @@
             <div>
                 <div class="d-flex justify-content-around align-items-start
                 ">
-                    <div class="d-grid mt-5">
+                    <div class="d-grid mt-3">
                         <div class="d-grid">
                             <div class="d-flex justify-content-center">
                                 <img 
@@ -26,7 +26,7 @@
                         </div>
                       
                     </div>
-                    <div class="d-grid mt-5">
+                    <div class="d-grid">
                         <div class="d-grid">
                             <div class="d-flex justify-content-center">
                                 <img 
@@ -67,9 +67,10 @@
                   
                 
                 </div>
-                <div class="d-flex mt-4  align-items-end justify-content-around">
+                <div class="d-flex  align-items-end justify-content-around"
+                style="margin-top: -30px;">
                     <div class="clip-1">
-                        <div class="d-grid pt-5 ps-3  ">
+                        <div class="d-grid pt-5 ps-5  ">
                             <b>1</b>
                             <b>140 pts</b>
                         </div>
