--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -69,14 +69,28 @@
                 </div>
                 <div class="d-flex  align-items-end justify-content-around"
                 style="margin-top: -30px;">
-                    <div class="clip-1">
-                        <div class="d-grid pt-5 ps-5  ">
-                            <b>1</b>
+                    <div class="clip-1 shadow">
+                        <div class="d-grid text-center pt-5 fs-2   mt-5 "
+                        style="font-weight: 800;">
+                            <b>2</b>
                             <b>140 pts</b>
                         </div>
                     </div>
-                    <div class="clip-2"></div>
-                    <div class="clip-3"></div>
+                    <div class="clip-2 shadow">
+                        <div class="d-grid text-center pt-5 fs-2   mt-5 "
+                        style="font-weight: 800;">
+                            <b>1</b>
+                            <b>140 pts</b>
+                        </div>
+                        
+                    </div>
+                    <div class="clip-3 shadow">
+                        <div class="d-grid text-center pt-5 fs-2   mt-5 "
+                        style="font-weight: 800;">
+                            <b>3</b>
+                            <b>140 pts</b>
+                        </div>
+                    </div>
 
 
 
