--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -85,9 +85,9 @@
                         
                     </div>
                     <div class="clip-3 shadow">
-                        <div class="d-grid text-center pt-5 fs-2   mt-5 "
-                        style="font-weight: 800;">
-                            <b>3</b>
+                        <div class="d-grid text-center pt-5 fs-3  mt-5 "
+                        style="font-weight: 800; ">
+                            <b class="fs-1" style="transform:skew(-10deg, 200deg)">3</b>
                             <b>140 pts</b>
                         </div>
                     </div>
