arrange three top scorers design

--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -70,25 +70,25 @@
                 <div class="d-flex  align-items-end justify-content-around"
                 style="margin-top: -30px;">
                     <div class="clip-1 shadow">
-                        <div class="d-grid text-center pt-5 fs-2   mt-5 "
-                        style="font-weight: 800;">
-                            <b>2</b>
-                            <b>140 pts</b>
+                        <div class="d-grid text-center mt-5 "
+                        style="font-weight: 800; padding-top:-100px; padding-left:-15px">
+                            <b style="font-size:100px; ">2</b>
+                            <b style="margin-top:-20px; margin-left:30px">140 pts</b>
                         </div>
                     </div>
                     <div class="clip-2 shadow">
-                        <div class="d-grid text-center pt-5 fs-2   mt-5 "
-                        style="font-weight: 800;">
-                            <b>1</b>
-                            <b>140 pts</b>
+                        <div class="d-grid text-center mt-5 "
+                        style="font-weight: 800; padding-top:-100px">
+                            <b style="font-size:100px">1</b>
+                            <b style="margin-top:-20px">140 pts</b>
                         </div>
                         
                     </div>
                     <div class="clip-3 shadow">
-                        <div class="d-grid text-center pt-5 fs-3  mt-5 "
-                        style="font-weight: 800; ">
-                            <b class="fs-1" style="transform:skew(-10deg, 200deg)">3</b>
-                            <b>140 pts</b>
+                        <div class="d-grid text-center mt-5 "
+                        style="font-weight: 800; padding-top:-100px">
+                            <b style="transform:skew(-10deg, 200deg); font-size:100px">3</b>
+                            <b style="margin-top:-20px; margin-right:20px">140 pts</b>
                         </div>
                     </div>
 
