--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -2,7 +2,6 @@
  
     <div 
     class="p-1 ps-2 d-flex align-items-center" 
-    routerLink="" 
     role="button"
     >
         <div
@@ -12,7 +11,10 @@
            
         </div>
 
-        <span class="lg-fs text-white">Ibisokozo</span>
+        <span 
+    routerLink="" 
+
+        class="lg-fs text-white">Ibisokozo</span>
     </div>
     
 
