--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -1,14 +1,23 @@
 <div class="">
     <div class="">
-        <div class="d-flex mt-2
+        <div class="d-flex mt-2 justify-content-between px-2 
         ">
             <b class="text-muted">Abafise amanota menshi</b>
+            <span 
+            class="fs-5"
+            role="button"
+            title="shira kumwanya"
+            >
+                <i class="fa fa-refresh"></i>
+            </span>
         </div>
         <div class="mt-3">
             <div>
                 <div class="d-flex justify-content-around align-items-start
                 ">
-                    <div class="d-grid mt-3">
+                    <div class="d-grid"
+                    (click)="openPhoto('../../../assets/images/profile.jpg')"
+                    style="margin-top: 2.7rem;">
                         <div class="d-grid">
                             <div class="d-flex justify-content-center">
                                 <img 
@@ -17,8 +26,10 @@
                             src="../../../assets/images/profile.jpg" alt="">
 
                             </div>
-                            <div class="mt-2">
-                            <span>Don Delice</span>
+                            <div class="mt-2 d-grid">
+                            <b>Don Delice</b>
+                            <b class="text-center">Dushime</b>
+
 
                             </div>
 
@@ -35,10 +46,12 @@
                             src="../../../assets/images/profile.jpg" alt="">
 
                             </div>
-                            <div class="mt-2">
-                            <span>Don Delice</span>
-
-                            </div>
+                            <div class="mt-2 d-grid">
+                                <b>Don Delice</b>
+                                <b class="text-center">Dushime</b>
+    
+    
+                                </div>
 
 
                         </div>
@@ -53,10 +66,12 @@
                             src="../../../assets/images/profile.jpg" alt="">
 
                             </div>
-                            <div class="mt-2">
-                            <span>Don Delice</span>
-
-                            </div>
+                            <div class="mt-2 d-grid">
+                                <b>Don Delice</b>
+                                <b class="text-center">Dushime</b>
+    
+    
+                                </div>
 
 
                         </div>
@@ -67,7 +82,7 @@
                   
                 
                 </div>
-                <div class="d-flex  align-items-end justify-content-around"
+                <div class="d-flex  align-items-end px-3 justify-content-around"
                 style="margin-top: -30px;">
                     <div class="clip-1 shadow">
                         <div class="d-grid text-center mt-5 "
@@ -96,6 +111,152 @@
 
 
                 </div>
+                <div 
+                class="w-100 bg-white shadow pb-5"
+                style="margin-top: -270px; border-radius:30px 30px 0px 0px; position:relative"
+                >
+                <div class="row align-items-center justify-content-around p-3">
+                    <div class="col-1">
+                        <span>4.</span>
+                    </div>
+                    <div class="col-2">
+                        <img 
+                        src="../../../assets/images/profile.jpg" 
+                    class="rounded-circle"
+                        style="width:48px; height:48px"
+                        alt="">
+                    </div>
+                    <div class="col-6">
+                        <b>Don Delice Dushime</b>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-rose d-flex justify-content-center rounded py-1">
+                            <b>130pts</b>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-around p-3">
+                    <div class="col-1">
+                        <span>5.</span>
+                    </div>
+                    <div class="col-2">
+                        <img 
+                        src="../../../assets/images/profile.jpg" 
+                    class="rounded-circle"
+                        style="width:48px; height:48px"
+                        alt="">
+                    </div>
+                    <div class="col-6">
+                        <span>Don Delice Dushime</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-rose d-flex justify-content-center rounded py-1">
+                            <span>130pts</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-around p-3">
+                    <div class="col-1">
+                        <span>6.</span>
+                    </div>
+                    <div class="col-2">
+                        <img 
+                        src="../../../assets/images/profile.jpg" 
+                    class="rounded-circle"
+                        style="width:48px; height:48px"
+                        alt="">
+                    </div>
+                    <div class="col-6">
+                        <span>Don Delice Dushime</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-rose d-flex justify-content-center rounded py-1">
+                            <span>130pts</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-around p-3">
+                    <div class="col-1">
+                        <span>7.</span>
+                    </div>
+                    <div class="col-2">
+                        <img 
+                        src="../../../assets/images/profile.jpg" 
+                    class="rounded-circle"
+                        style="width:48px; height:48px"
+                        alt="">
+                    </div>
+                    <div class="col-6">
+                        <span>Don Delice Dushime</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-rose d-flex justify-content-center rounded py-1">
+                            <span>130pts</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-around p-3">
+                    <div class="col-1">
+                        <span>8.</span>
+                    </div>
+                    <div class="col-2">
+                        <img 
+                        src="../../../assets/images/profile.jpg" 
+                    class="rounded-circle"
+                        style="width:48px; height:48px"
+                        alt="">
+                    </div>
+                    <div class="col-6">
+                        <span>Don Delice Dushime</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-rose d-flex justify-content-center rounded py-1">
+                            <span>130pts</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-around p-3">
+                    <div class="col-1">
+                        <span>9.</span>
+                    </div>
+                    <div class="col-2">
+                        <img 
+                        src="../../../assets/images/profile.jpg" 
+                    class="rounded-circle"
+                        style="width:48px; height:48px"
+                        alt="">
+                    </div>
+                    <div class="col-6">
+                        <span>Don Delice Dushime</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-rose d-flex justify-content-center rounded py-1">
+                            <span>130pts</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-around p-3">
+                    <div class="col-1">
+                        <span>10.</span>
+                    </div>
+                    <div class="col-2">
+                        <img 
+                        src="../../../assets/images/profile.jpg" 
+                    class="rounded-circle"
+                        style="width:48px; height:48px"
+                        alt="">
+                    </div>
+                    <div class="col-6">
+                        <span>Don Delice Dushime</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-rose d-flex justify-content-center rounded py-1">
+                            <span>130pts</span>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
             </div>
         </div>
     </div>
@@ -103,14 +264,25 @@
 
 <!--  -->
 <!-- Enlarged photo modal -->
-<div class="photo-modal" [ngClass]="{ 'show-modal': isPhotoOpen }">
+<div *ngIf="isPhotoOpen">
+    <div 
+class="photo-modal d-grid" 
+[ngClass]="{ 'show-modal': isPhotoOpen }"
+>
     <b
-     class="float-end mb-2 ms-2" 
+     class="float-end mb-2 ms-2 d-flex justify-content-end" 
      (click)="closePhoto()"
      role="button">
         <i class="fs-1 fa fa-times"></i>
     </b>
     <img [src]="enlargedPhotoUrl" alt="Enlarged User Photo" class="enlarged-photo">
+    <div class="d-grid pt-2">
+        <span>Don Delice Dushime</span>
+        <b>140pts</b>
+
+    </div>
+
    
+</div>
 </div>
 <div class="overlay" [ngClass]="{ 'show-overlay': isPhotoOpen }"></div>
