redesign the signup page

--- a/src/app/modules/igisokozo/level-two/level-two.component.html
+++ b/src/app/modules/igisokozo/level-two/level-two.component.html
@@ -7,5 +7,14 @@
       Urugero rwa kabiri ntiruratunganwa neza, Gerageza urundi rugero
 
     </span>
+    <div 
+    class="w-100 align-items-center d-flex justify-content-center"
+    >
+        <button
+        (click)="goBack()"
+         style="border: 10%; border:none" class="bg-main rounded text-white p-2 px-4">
+            <b>subira inyuma</b>
+        </button>
+    </div>
   </div>
 </div>
