--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -3,61 +3,139 @@
    
 </div>
 <div class="pt-5">
-    <div class="w-100 d-flex justify-content-center mb-5 mt-5 ">
-        <span class="lg-fs text-main">Signup</span>
+    <div class="w-100 d-flex justify-content-center mb-5 mt-2 ">
+        <span class="lg-fs text-main">iyandikishe</span>
     </div>
 
-    <div class="w-100 d-flex justify-content-center mt-5">
-        <div class="">
-            <div class="d-grid mb-2">
-                <label for="email" class="mb-1">Email Adress</label>
-                <input type="email" class="form-control border input rounded" id="email" placeholder="Email">
-            </div>
-            <div class="d-grid mb-2">
-                <label for="username" class="mb-1">Username</label>
-                <input type="text" class="form-control border input rounded" id="username" placeholder="Username">
-            </div>
-            <div class="d-grid mb-2">
-                <label for="password" class="mb-1">Password</label>
-                <div class="input-group">
-                    <input type="{{ passwordVisible ? 'text' : 'password' }}" class="form-control border input rounded" id="password" placeholder="Password">
-                    <span class="password-toggle" (click)="togglePasswordVisibility()">
-                        <i class="fa" [ngClass]="passwordVisible ? 'fa-eye' : 'fa-eye-slash'"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="d-grid ">
-                <label for="password2" class="mb-1">Confirm Password</label>
-                <div class="input-group">
-                    <input type="{{ passwordVisible ? 'text' : 'password' }}" class="form-control border input rounded" id="password2" placeholder="Reenter Password">
-                    <span class="password-toggle" (click)="togglePasswordVisibility()">
-                        <i class="fa" [ngClass]="passwordVisible ? 'fa-eye' : 'fa-eye-slash'"></i>
-                    </span>
-                </div>
-            </div>
-          <br><br><br>
+<div class="px-4 ">
+    <div 
+    class=""
+    
+    >
+        <div class="d-grid mb-2 form-floating">
+            <input
+             type="text" 
+             class="form-control border input rounded" 
+             id="username" 
+             placeholder="Username"
+             >
+            <label for="email" class="">Akazina ukoresha</label>
 
-            <div class="w-100 d-flex justify-content-center mt-4">
-                <button class="bg-main rounded text-white p-2 px-5 border border-none">
-                    <b>Signup</b>
-                </button>
-
-            </div>
-            <div class="mt-3">
-                <div>
-                    <span>Already have an account ? </span>
-                    <b
-                     class="text-main"
-                     routerLink="/login"
-                     role="button">Login</b>
-                </div>
-            </div>
-            
-            
-            
         </div>
+        <div class="d-grid mb-2 form-floating">
+            <input
+             type="text" 
+             class="form-control border input rounded" 
+             id="username" 
+             placeholder="Username"
+             >
+            <label for="email" class="">itazirano</label>
 
+        </div>
+        <div class="d-grid mb-2 form-floating">
+            <input
+             type="text" 
+             class="form-control border input rounded" 
+             id="username" 
+             placeholder="Username"
+             >
+            <label for="email" class="">izina</label>
+
+        </div>
+        <div class="d-grid mb-2 form-floating">
+            <input
+             type="text" 
+             class="form-control border input rounded" 
+             id="username" 
+             placeholder="Username"
+             >
+            <label for="email" class="">agasandugu k'ubutumwa</label>
+
+        </div>
+        <div class="d-grid">
+            <div class="input-group mb-2">
+                <div class="form-floating">
+                    <input 
+                type="{{ passwordVisible ? 'text' : 'password' }}" 
+                class="form-control border input rounded" 
+                id="password" 
+                placeholder="Password"
+                formControlName="password">
+              <label for="password" class="mb-1">Akabanga</label>
+
+                </div>
+                
+                <span class="password-toggle" 
+                >
+                <span
+                (click)="togglePasswordVisibility()"
+                *ngIf="passwordVisible">
+                    <i class="fa fa-eye"></i>
+                </span>
+                <span
+                (click)="togglePasswordVisibility()"
+                *ngIf="!passwordVisible">
+                    <i class="fa fa-eye-slash"></i>
+                </span>
+                                        
+                </span>
+            </div>
+        
+        </div>
+        <div class="d-grid">
+            <div class="input-group mb-2">
+                <div class="form-floating">
+                    <input 
+                type="{{ passwordVisible ? 'text' : 'password' }}" 
+                class="form-control border input rounded" 
+                id="password" 
+                placeholder="Password"
+                formControlName="password">
+              <label for="password" class="mb-1">Akabanga</label>
+
+                </div>
+                
+                <span class="password-toggle" 
+                >
+                <span
+                (click)="togglePasswordVisibility()"
+                *ngIf="passwordVisible">
+                    <i class="fa fa-eye"></i>
+                </span>
+                <span
+                (click)="togglePasswordVisibility()"
+                *ngIf="!passwordVisible">
+                    <i class="fa fa-eye-slash"></i>
+                </span>
+                                        
+                </span>
+            </div>
+        
+        </div>
+        <br><br>
+
+        <div class="w-100 d-flex justify-content-center mt-4">
+            <button 
+            type="submit"
+            class="bg-main rounded text-white p-2 px-5 border border-none">
+                <b>iyandikishe</b>
+            </button>
+
+        </div>
+        <div class=" w-100 d-flex justify-content-center mt-2">
+            <div>
+                <span>Already have an account ? </span>
+                <b
+                 class="text-main"
+                 routerLink="/login"
+                 role="button">injira</b>
+            </div>
+        </div>
+        
+        
+        
     </div>
+</div>
 </div>
 <div class="position-fixed w-100"
 style="bottom: 0;">
