design the reset-password page

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -55,6 +55,7 @@
             <div class="float-end mb-2">
                 <b
                  class="text-main" 
+                 routerLink="/reset-password"
                  style="text-decoration: underline;"
                  role="button">Forgot password</b>
             </div><br><br><br>
